// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`truncate.sql > line 2 1`] = `
[
  "CREATE TABLE truncate_a (col1 integer primary key)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "truncate_a",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "col1",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_PRIMARY",
                        "location": 38,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 25,
                  "typeName": {
                    "location": 30,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 7 1`] = `
[
  "BEGIN",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_BEGIN",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 18 1`] = `
[
  "CREATE TABLE trunc_b (a int REFERENCES truncate_a)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "trunc_b",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_FOREIGN",
                        "fk_del_action": "a",
                        "fk_matchtype": "s",
                        "fk_upd_action": "a",
                        "initially_valid": true,
                        "location": 28,
                        "pktable": {
                          "inh": true,
                          "location": 39,
                          "relname": "truncate_a",
                          "relpersistence": "p",
                        },
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 22,
                  "typeName": {
                    "location": 24,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 23 1`] = `
[
  "TRUNCATE TABLE truncate_a",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 15,
                  "relname": "truncate_a",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 23 2`] = `
[
  "		-- fail
TRUNCATE TABLE truncate_a,trunc_b",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 25,
                  "relname": "truncate_a",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 36,
                  "relname": "trunc_b",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 24 1`] = `
[
  "		-- fail
TRUNCATE TABLE truncate_a,trunc_b,trunc_e",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 25,
                  "relname": "truncate_a",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 36,
                  "relname": "trunc_b",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 44,
                  "relname": "trunc_e",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 25 1`] = `
[
  "	-- ok
TRUNCATE TABLE truncate_a,trunc_e",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 22,
                  "relname": "truncate_a",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 33,
                  "relname": "trunc_e",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 26 1`] = `
[
  "		-- fail
TRUNCATE TABLE trunc_c",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 25,
                  "relname": "trunc_c",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 27 1`] = `
[
  "		-- fail
TRUNCATE TABLE trunc_c,trunc_d",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 25,
                  "relname": "trunc_c",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 33,
                  "relname": "trunc_d",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 28 1`] = `
[
  "		-- fail
TRUNCATE TABLE trunc_c,trunc_d,trunc_e",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 25,
                  "relname": "trunc_c",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 33,
                  "relname": "trunc_d",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 41,
                  "relname": "trunc_e",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 29 1`] = `
[
  "	-- ok
TRUNCATE TABLE trunc_c,trunc_d,trunc_e,truncate_a",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 22,
                  "relname": "trunc_c",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 30,
                  "relname": "trunc_d",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 38,
                  "relname": "trunc_e",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 46,
                  "relname": "truncate_a",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 30 1`] = `
[
  "	-- fail
TRUNCATE TABLE trunc_c,trunc_d,trunc_e,truncate_a,trunc_b",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 24,
                  "relname": "trunc_c",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 32,
                  "relname": "trunc_d",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 40,
                  "relname": "trunc_e",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 48,
                  "relname": "truncate_a",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 59,
                  "relname": "trunc_b",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 33 1`] = `
[
  " -- fail
TRUNCATE TABLE truncate_a CASCADE",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_CASCADE",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 24,
                  "relname": "truncate_a",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 34 1`] = `
[
  "  -- ok

-- circular references
ALTER TABLE truncate_a ADD FOREIGN KEY (col1) REFERENCES trunc_c",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "Constraint": {
                      "contype": "CONSTR_FOREIGN",
                      "fk_attrs": [
                        {
                          "String": {
                            "sval": "col1",
                          },
                        },
                      ],
                      "fk_del_action": "a",
                      "fk_matchtype": "s",
                      "fk_upd_action": "a",
                      "initially_valid": true,
                      "location": 59,
                      "pktable": {
                        "inh": true,
                        "location": 89,
                        "relname": "trunc_c",
                        "relpersistence": "p",
                      },
                    },
                  },
                  "subtype": "AT_AddConstraint",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 44,
              "relname": "truncate_a",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 40 1`] = `
[
  "INSERT INTO trunc_c VALUES (1)",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "trunc_c",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 28,
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 52 1`] = `
[
  "SELECT * FROM truncate_a
   UNION ALL
 SELECT * FROM trunc_c
   UNION ALL
 SELECT * FROM trunc_b
   UNION ALL
 SELECT * FROM trunc_d",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "all": true,
            "larg": {
              "all": true,
              "larg": {
                "all": true,
                "larg": {
                  "fromClause": [
                    {
                      "RangeVar": {
                        "inh": true,
                        "location": 14,
                        "relname": "truncate_a",
                        "relpersistence": "p",
                      },
                    },
                  ],
                  "limitOption": "LIMIT_OPTION_DEFAULT",
                  "op": "SETOP_NONE",
                  "targetList": [
                    {
                      "ResTarget": {
                        "location": 7,
                        "val": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "A_Star": {},
                              },
                            ],
                            "location": 7,
                          },
                        },
                      },
                    },
                  ],
                },
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_UNION",
                "rarg": {
                  "fromClause": [
                    {
                      "RangeVar": {
                        "inh": true,
                        "location": 53,
                        "relname": "trunc_c",
                        "relpersistence": "p",
                      },
                    },
                  ],
                  "limitOption": "LIMIT_OPTION_DEFAULT",
                  "op": "SETOP_NONE",
                  "targetList": [
                    {
                      "ResTarget": {
                        "location": 46,
                        "val": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "A_Star": {},
                              },
                            ],
                            "location": 46,
                          },
                        },
                      },
                    },
                  ],
                },
              },
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_UNION",
              "rarg": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 89,
                      "relname": "trunc_b",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 82,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 82,
                        },
                      },
                    },
                  },
                ],
              },
            },
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_UNION",
            "rarg": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 125,
                    "relname": "trunc_d",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 118,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 118,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 68 1`] = `
[
  "TRUNCATE TABLE trunc_c CASCADE",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_CASCADE",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 15,
                  "relname": "trunc_c",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 79 1`] = `
[
  "DROP TABLE truncate_a,trunc_c,trunc_b,trunc_d,trunc_e CASCADE",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_CASCADE",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "truncate_a",
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "trunc_c",
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "trunc_b",
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "trunc_d",
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "trunc_e",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 87 1`] = `
[
  "CREATE TABLE trunc_fa (col2a text) INHERITS (trunc_f)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "inhRelations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 45,
                  "relname": "trunc_f",
                  "relpersistence": "p",
                },
              },
            ],
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "trunc_fa",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "col2a",
                  "is_local": true,
                  "location": 23,
                  "typeName": {
                    "location": 29,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 90 1`] = `
[
  "CREATE TABLE trunc_fb (col2b int) INHERITS (trunc_f)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "inhRelations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 44,
                  "relname": "trunc_f",
                  "relpersistence": "p",
                },
              },
            ],
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "trunc_fb",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "col2b",
                  "is_local": true,
                  "location": 23,
                  "typeName": {
                    "location": 29,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 93 1`] = `
[
  "CREATE TABLE trunc_faa (col3 text) INHERITS (trunc_fa)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "inhRelations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 45,
                  "relname": "trunc_fa",
                  "relpersistence": "p",
                },
              },
            ],
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "trunc_faa",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "col3",
                  "is_local": true,
                  "location": 24,
                  "typeName": {
                    "location": 29,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 128 1`] = `
[
  "DROP TABLE trunc_f CASCADE",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_CASCADE",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "trunc_f",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 136 1`] = `
[
  "CREATE FUNCTION trunctrigger() RETURNS trigger as $$
declare c bigint;
begin
    execute 'select count(*) from ' || quote_ident(tg_table_name) into c;
    insert into trunc_trigger_log values
      (TG_OP, TG_LEVEL, TG_WHEN, TG_ARGV[0], tg_table_name, c);
    return null;
end;
$$ LANGUAGE plpgsql",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "trunctrigger",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
declare c bigint;
begin
    execute 'select count(*) from ' || quote_ident(tg_table_name) into c;
    insert into trunc_trigger_log values
      (TG_OP, TG_LEVEL, TG_WHEN, TG_ARGV[0], tg_table_name, c);
    return null;
end;
",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 47,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "plpgsql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 281,
                },
              },
            ],
            "returnType": {
              "location": 39,
              "names": [
                {
                  "String": {
                    "sval": "trigger",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 147 1`] = `
[
  "INSERT INTO trunc_trigger_test VALUES(1, 'foo', 'bar'), (2, 'baz', 'quux')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "trunc_trigger_test",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 38,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 41,
                            "sval": {
                              "sval": "foo",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 48,
                            "sval": {
                              "sval": "bar",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 57,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 60,
                            "sval": {
                              "sval": "baz",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 67,
                            "sval": {
                              "sval": "quux",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 149 1`] = `
[
  "CREATE TRIGGER t
BEFORE TRUNCATE ON trunc_trigger_test
FOR EACH STATEMENT
EXECUTE PROCEDURE trunctrigger('before trigger truncate')",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTrigStmt": {
            "args": [
              {
                "String": {
                  "sval": "before trigger truncate",
                },
              },
            ],
            "events": 32,
            "funcname": [
              {
                "String": {
                  "sval": "trunctrigger",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 36,
              "relname": "trunc_trigger_test",
              "relpersistence": "p",
            },
            "timing": 2,
            "trigname": "t",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 154 1`] = `
[
  "SELECT count(*) as "Row count in test table" FROM trunc_trigger_test",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 50,
                  "relname": "trunc_trigger_test",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "Row count in test table",
                  "val": {
                    "FuncCall": {
                      "agg_star": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 160 1`] = `
[
  "DROP TRIGGER t ON trunc_trigger_test",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "trunc_trigger_test",
                      },
                    },
                    {
                      "String": {
                        "sval": "t",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TRIGGER",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 162 1`] = `
[
  "truncate trunc_trigger_log",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 9,
                  "relname": "trunc_trigger_log",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 167 1`] = `
[
  "CREATE TRIGGER tt
AFTER TRUNCATE ON trunc_trigger_test
FOR EACH STATEMENT
EXECUTE PROCEDURE trunctrigger('after trigger truncate')",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTrigStmt": {
            "args": [
              {
                "String": {
                  "sval": "after trigger truncate",
                },
              },
            ],
            "events": 32,
            "funcname": [
              {
                "String": {
                  "sval": "trunctrigger",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 36,
              "relname": "trunc_trigger_test",
              "relpersistence": "p",
            },
            "trigname": "tt",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 178 1`] = `
[
  "DROP TABLE trunc_trigger_test",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "trunc_trigger_test",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 181 1`] = `
[
  "DROP FUNCTION trunctrigger()",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objname": [
                    {
                      "String": {
                        "sval": "trunctrigger",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_FUNCTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 184 1`] = `
[
  "CREATE SEQUENCE truncate_a_id1 START WITH 33",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSeqStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 33,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "start",
                  "location": 31,
                },
              },
            ],
            "sequence": {
              "inh": true,
              "location": 16,
              "relname": "truncate_a_id1",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 189 1`] = `
[
  "INSERT INTO truncate_a DEFAULT VALUES",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "truncate_a",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 199 1`] = `
[
  "TRUNCATE truncate_a RESTART IDENTITY",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 9,
                  "relname": "truncate_a",
                  "relpersistence": "p",
                },
              },
            ],
            "restart_seqs": true,
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 205 1`] = `
[
  "CREATE TABLE truncate_b (id int GENERATED ALWAYS AS IDENTITY (START WITH 44))",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "truncate_b",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "id",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_IDENTITY",
                        "generated_when": "a",
                        "location": 32,
                        "options": [
                          {
                            "DefElem": {
                              "arg": {
                                "Integer": {
                                  "ival": 44,
                                },
                              },
                              "defaction": "DEFELEM_UNSPEC",
                              "defname": "start",
                              "location": 62,
                            },
                          },
                        ],
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 25,
                  "typeName": {
                    "location": 28,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 207 1`] = `
[
  "INSERT INTO truncate_b DEFAULT VALUES",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "truncate_b",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 211 1`] = `
[
  "TRUNCATE truncate_b",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 9,
                  "relname": "truncate_b",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 217 1`] = `
[
  "TRUNCATE truncate_b RESTART IDENTITY",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 9,
                  "relname": "truncate_b",
                  "relpersistence": "p",
                },
              },
            ],
            "restart_seqs": true,
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 233 1`] = `
[
  "DROP TABLE truncate_a",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "truncate_a",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 235 1`] = `
[
  "SELECT nextval('truncate_a_id1')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 15,
                            "sval": {
                              "sval": "truncate_a_id1",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "nextval",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 235 2`] = `
[
  " -- fail, seq should have been dropped

-- partitioned table
CREATE TABLE truncparted (a int, b char) PARTITION BY LIST (a)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "partspec": {
              "location": 102,
              "partParams": [
                {
                  "PartitionElem": {
                    "location": 121,
                    "name": "a",
                  },
                },
              ],
              "strategy": "PARTITION_STRATEGY_LIST",
            },
            "relation": {
              "inh": true,
              "location": 74,
              "relname": "truncparted",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 87,
                  "typeName": {
                    "location": 89,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 94,
                  "typeName": {
                    "location": 96,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bpchar",
                        },
                      },
                    ],
                    "typemod": -1,
                    "typmods": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": -1,
                        },
                      },
                    ],
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 240 1`] = `
[
  "TRUNCATE ONLY truncparted",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "location": 14,
                  "relname": "truncparted",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 250 1`] = `
[
  "CREATE FUNCTION tp_ins_data() RETURNS void LANGUAGE plpgsql AS $$
  BEGIN
	INSERT INTO truncprim VALUES (1), (100), (150);
	INSERT INTO truncpart VALUES (1), (100), (150);
  END
$$",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "tp_ins_data",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "plpgsql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 43,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
  BEGIN
	INSERT INTO truncprim VALUES (1), (100), (150);
	INSERT INTO truncpart VALUES (1), (100), (150);
  END
",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 60,
                },
              },
            ],
            "returnType": {
              "location": 38,
              "names": [
                {
                  "String": {
                    "sval": "void",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 274 1`] = `
[
  "TRUNCATE TABLE truncprim",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 15,
                  "relname": "truncprim",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 274 2`] = `
[
  "	-- should fail

select tp_ins_data()",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 24,
                  "val": {
                    "FuncCall": {
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "tp_ins_data",
                          },
                        },
                      ],
                      "location": 24,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 278 1`] = `
[
  "TRUNCATE TABLE truncprim, truncpart",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 15,
                  "relname": "truncprim",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 26,
                  "relname": "truncpart",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 283 1`] = `
[
  "TRUNCATE TABLE truncprim CASCADE",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_CASCADE",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 15,
                  "relname": "truncprim",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 288 1`] = `
[
  "TRUNCATE TABLE truncpart",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 15,
                  "relname": "truncpart",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 294 1`] = `
[
  "CREATE TABLE trunc_a (a INT PRIMARY KEY) PARTITION BY RANGE (a)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "partspec": {
              "location": 41,
              "partParams": [
                {
                  "PartitionElem": {
                    "location": 61,
                    "name": "a",
                  },
                },
              ],
              "strategy": "PARTITION_STRATEGY_RANGE",
            },
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "trunc_a",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_PRIMARY",
                        "location": 28,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 22,
                  "typeName": {
                    "location": 24,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 305 1`] = `
[
  "CREATE TABLE ref_b (
    b INT PRIMARY KEY,
    a INT REFERENCES trunc_a(a) ON DELETE CASCADE
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "ref_b",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "b",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_PRIMARY",
                        "location": 31,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 25,
                  "typeName": {
                    "location": 27,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "a",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_FOREIGN",
                        "fk_del_action": "c",
                        "fk_matchtype": "s",
                        "fk_upd_action": "a",
                        "initially_valid": true,
                        "location": 54,
                        "pk_attrs": [
                          {
                            "String": {
                              "sval": "a",
                            },
                          },
                        ],
                        "pktable": {
                          "inh": true,
                          "location": 65,
                          "relname": "trunc_a",
                          "relpersistence": "p",
                        },
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 48,
                  "typeName": {
                    "location": 50,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 311 1`] = `
[
  "TRUNCATE TABLE trunc_a1 CASCADE",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_CASCADE",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 15,
                  "relname": "trunc_a1",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 314 1`] = `
[
  "DROP TABLE ref_b",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "ref_b",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 317 1`] = `
[
  "CREATE TABLE ref_c (
    c INT PRIMARY KEY,
    a INT REFERENCES trunc_a(a) ON DELETE CASCADE
) PARTITION BY RANGE (c)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "partspec": {
              "location": 96,
              "partParams": [
                {
                  "PartitionElem": {
                    "location": 116,
                    "name": "c",
                  },
                },
              ],
              "strategy": "PARTITION_STRATEGY_RANGE",
            },
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "ref_c",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "c",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_PRIMARY",
                        "location": 31,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 25,
                  "typeName": {
                    "location": 27,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "a",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_FOREIGN",
                        "fk_del_action": "c",
                        "fk_matchtype": "s",
                        "fk_upd_action": "a",
                        "initially_valid": true,
                        "location": 54,
                        "pk_attrs": [
                          {
                            "String": {
                              "sval": "a",
                            },
                          },
                        ],
                        "pktable": {
                          "inh": true,
                          "location": 65,
                          "relname": "trunc_a",
                          "relpersistence": "p",
                        },
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 48,
                  "typeName": {
                    "location": 50,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 325 1`] = `
[
  "TRUNCATE TABLE trunc_a21 CASCADE",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_CASCADE",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 15,
                  "relname": "trunc_a21",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`truncate.sql > line 329 1`] = `
[
  "DROP TABLE trunc_a, ref_c",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "trunc_a",
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "ref_c",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
